// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertGlob handles ** 1`] = `
{
  "globBase": "file:///mock/baseDir",
  "globPattern": "**/*",
  "regex": /\\^\\(\\?:\\(\\?:\\(\\?:\\(\\?!\\(\\?:\\^\\|\\\\/\\)\\\\\\.\\)\\.\\)\\*\\?\\)\\)\\$/,
}
`;

exports[`convertGlob handles **/* 1`] = `
{
  "globBase": "file:///mock/baseDir",
  "globPattern": "**/*",
  "regex": /\\^\\(\\?:\\(\\?:\\^\\|\\\\/\\|\\(\\?:\\(\\?:\\(\\?!\\(\\?:\\^\\|\\\\/\\)\\\\\\.\\)\\.\\)\\*\\?\\)\\\\/\\)\\(\\?!\\\\\\.\\)\\(\\?=\\.\\)\\[\\^/\\]\\*\\?\\\\/\\?\\)\\$/,
}
`;

exports[`convertGlob handles **/*.stories.@(js|jsx|ts|tsx) 1`] = `
{
  "globBase": "file:///mock/baseDir",
  "globPattern": "**/*",
  "regex": /\\^\\(\\?:\\(\\?:\\^\\|\\\\/\\|\\(\\?:\\(\\?:\\(\\?!\\(\\?:\\^\\|\\\\/\\)\\\\\\.\\)\\.\\)\\*\\?\\)\\\\/\\)\\(\\?!\\\\\\.\\)\\(\\?=\\.\\)\\[\\^/\\]\\*\\?\\\\\\.stories\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)\\)\\$/,
}
`;

exports[`convertGlob handles **/../*.ts 1`] = `
{
  "globBase": "file:///mock/baseDir",
  "globPattern": "**/*",
  "regex": /\\^\\(\\?:\\(\\?:\\^\\|\\\\/\\|\\(\\?:\\(\\?:\\(\\?!\\(\\?:\\^\\|\\\\/\\)\\\\\\.\\)\\.\\)\\*\\?\\)\\\\/\\)\\\\\\.\\\\\\.\\\\/\\(\\?!\\\\\\.\\)\\(\\?=\\.\\)\\[\\^/\\]\\*\\?\\\\\\.ts\\)\\$/,
}
`;

exports[`convertGlob handles ../src/**/*.stories.@(js|jsx|ts|tsx) 1`] = `
{
  "globBase": "file:///mock/src",
  "globPattern": "**/*",
  "regex": /\\^\\(\\?:\\(\\?:\\^\\|\\\\/\\|\\(\\?:\\(\\?:\\(\\?!\\(\\?:\\^\\|\\\\/\\)\\\\\\.\\)\\.\\)\\*\\?\\)\\\\/\\)\\(\\?!\\\\\\.\\)\\(\\?=\\.\\)\\[\\^/\\]\\*\\?\\\\\\.stories\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)\\)\\$/,
}
`;

exports[`convertGlob handles ../src/**/*.stories.mdx 1`] = `
{
  "globBase": "file:///mock/src",
  "globPattern": "**/*",
  "regex": /\\^\\(\\?:\\(\\?:\\^\\|\\\\/\\|\\(\\?:\\(\\?:\\(\\?!\\(\\?:\\^\\|\\\\/\\)\\\\\\.\\)\\.\\)\\*\\?\\)\\\\/\\)\\(\\?!\\\\\\.\\)\\(\\?=\\.\\)\\[\\^/\\]\\*\\?\\\\\\.stories\\\\\\.mdx\\)\\$/,
}
`;

exports[`convertGlob handles @(js|jsx|ts|tsx) 1`] = `
{
  "globBase": "file:///mock/baseDir",
  "globPattern": "**/*",
  "regex": /\\^\\(\\?:\\(js\\|jsx\\|ts\\|tsx\\)\\)\\$/,
}
`;

exports[`convertGlob handles file.ts 1`] = `
{
  "globBase": "file:///mock/baseDir/file.ts",
}
`;

exports[`convertGlob handles src/* 1`] = `
{
  "globBase": "file:///mock/baseDir/src",
  "globPattern": "**/*",
  "regex": /\\^\\(\\?:\\(\\?!\\\\\\.\\)\\(\\?=\\.\\)\\[\\^/\\]\\*\\?\\\\/\\?\\)\\$/,
}
`;

exports[`convertGlob handles src/** 1`] = `
{
  "globBase": "file:///mock/baseDir/src",
  "globPattern": "**/*",
  "regex": /\\^\\(\\?:\\(\\?:\\(\\?:\\(\\?!\\(\\?:\\^\\|\\\\/\\)\\\\\\.\\)\\.\\)\\*\\?\\)\\)\\$/,
}
`;

exports[`convertGlob handles src/**/*.ts 1`] = `
{
  "globBase": "file:///mock/baseDir/src",
  "globPattern": "**/*",
  "regex": /\\^\\(\\?:\\(\\?:\\^\\|\\\\/\\|\\(\\?:\\(\\?:\\(\\?!\\(\\?:\\^\\|\\\\/\\)\\\\\\.\\)\\.\\)\\*\\?\\)\\\\/\\)\\(\\?!\\\\\\.\\)\\(\\?=\\.\\)\\[\\^/\\]\\*\\?\\\\\\.ts\\)\\$/,
}
`;

exports[`convertGlob handles src/file.ts 1`] = `
{
  "globBase": "file:///mock/baseDir/src/file.ts",
}
`;
